syntax = "proto3";
option java_package = "com.toda.api.TODASERVERSPRINGBOOT.models.protobuffers";
option java_outer_classname = "KafkaMailProto";

message KafkaMail {
  string to = 1;
  string subject = 2;
  string text = 3;
}