syntax = "proto3";

option java_outer_classname = "KafkaMailProto";
package com.toda.api.TODASERVERSPRINGBOOT.models.protobuffers;

message KafkaMailRequest {
  string to = 1;
  string subject = 2;
  string text = 3;
}

message KafkaMailResponse {
  string response = 1;
}

service KafkaMailService {
  rpc SendMail (KafkaMailRequest) returns (KafkaMailResponse) {}
}